grammar.js
    template: ($) =>
      repeat(
        $._node
      ),

    _node: ($) => 
      choice(
        $.directive,
        $.content,
        $.comment,
      ),

    content: (_) => 
      choice(
        /[^{]+|\{[^{%]/, 
        '{%%', 
        '{{{'
      ),

    directive: ($) => 
      choice(
        $._unpaired_tag,
        $._paired_tag,
        $._output_directive,
      ),

    _unpaired_tag: ($) => 
      seq(
        $._tag_delimiter_open,
        choice($.statement, $.liquid_tag),
        $._tag_delimiter_close,
      ),

    _output_directive: ($) => 
      seq(
        $._output_delimiter_open,
        $.expression,
        $._output_delimiter_close,
      ),

    liquid_tag: ($) => 
      seq(
        "liquid", 
        repeat(
          choice(
            $._liquid_node,
            alias($._inline_comment_content, $.comment)
          )
        )
      ),

    _liquid_node: ($) =>
      seq(
        choice(
          $.expression,
          $.statement,
          $._paired_statement,
        ),
        /(\r\n|\r|\n)/,
      ),

    _paired_tag: ($) => 
      choice(
        $.if_tag,
        $.unless_tag,
        $.case_tag,
        $.for_loop_tag,
        $.capture_tag,
        $.tablerow_tag,
        $.paginate_tag,
        $.schema_tag,
        $.raw_tag,
        $.style_tag,
        $.javascript_tag,
        $.form_tag,
      ),

    if_tag: ($) =>
      seq(
        $._tag_delimiter_open, 
        "if", field("condition", $.expression), 
        $._tag_delimiter_close, 

        field("consequence", alias(repeat($._node), $.block)),
        repeat(field("alternative", $.elsif_tag)),
        optional(field("alternative", $.else_tag)),

        prec.right(
          seq(
            $._tag_delimiter_open, 
            "endif", 
            $._tag_delimiter_close
          )
        ), 
      ),

    raw_tag: ($) =>
      seq(
        $._tag_delimiter_open,
        "raw",
        $._tag_delimiter_close,

        $.raw_content,
        optional($.raw_tag),

        $._tag_delimiter_open, 
        "endraw", 
        $._tag_delimiter_close
      ),

    // TODO: WIP & test
    render: ($) =>
      seq(
        "render",
        field("file", $.string),
        optional(
          field(
            "modifier",
            choice(
              seq(",", $.argument_list),
              $.opt_as_expr
            )
          )
        )
      ),

    assignment: ($) =>
      seq(
        "assign",
        field("variable_name", $.identifier),
        "=",
        field("value", $.expression)
      ),

    identifier: (_) => /([a-zA-Z][0-9a-zA-Z_\?-]*)/,

    string: (_) => 
      choice(
        seq("'", /[^']*/, "'"),
        seq('"', /[^"]*/, '"')
      ),

    boolean: (_) => choice("true", "false"),

    comment: ($) => choice($._inline_comment, $._paired_comment),

    _inline_comment: ($) => 
      seq(
        $._tag_delimiter_open, 
        repeat1($._inline_comment_content),
        $._tag_delimiter_close
      ),

    _paired_comment: ($) =>
      seq(
        $._tag_delimiter_open,
        "comment", 
        $._tag_delimiter_close,

        $._paired_comment_content,
        optional($._paired_comment),

        $._tag_delimiter_open,
        "endcomment", 
        $._tag_delimiter_close,
      ),

    ///////////////
    // Delmiters //
    ///////////////

    _tag_delimiter_open: (_) => choice("{%", "{%-"),

    _tag_delimiter_close: (_) => choice("%}", "-%}"),

  },
});
