test/corpus/comments.txt
==================
Inline Comment
==================

<html>
  {% # render "string" %}
</html>

---
(template
 (content)
 (comment)
 (content))

==================
Paired Tag Comment
==================

<html>
  {% if true %}
    {% comment %}
      {% render "file" %}
      {{ data.page.title | reverse }}
      <div>hi</div>
      {{ data.page }}
      content
    {%- endcomment %}
  {% endif %}
</html>

---
(template
  (content)
  (directive
   (if_tag
    condition: (boolean)
    consequence: (block
      (comment))))
    (content))

==================
Nested Comments
==================

{% comment %}
{% comment %}
{% comment %}
{% render "file" %}
{% endcomment %}
{% endcomment %}
{% endcomment %}

---
  (template
   (comment)
   (content))

==================
Comment Error
==================

{% comment %}
{% comment %}
{% endcomment %}

---
  (template
   (ERROR))

==================
Liquid Inline Comment
==================

<html>
  {% liquid
    assign value = "string"
    # render "file1"
    # this renders a string
    # cool
    render "file2"
  %}
</html>

---
  (template
   (content)
   (directive
    (liquid_tag
     (assignment
      (identifier)
       (string))
     (comment)
     (comment)
     (comment)
      (render
       (string))))
   (content))

==================
Raw Tag
==================

<html>
  {% raw %}
    {% render "something" %}
    {{ data.page.title | reverse }}
    <div>hi</div>
    {{ data.page }}
    content
  {% endraw %}
</html>

---
  (template
   (content)
   (directive
    (raw_tag
     (raw_content)))
   (content))

==================
Nested Raw
==================

{% raw %}
{% raw %}
{% raw %}
{% render "file" %}
{% endraw %}
{% endraw %}
{% endraw %}

---

(template
 (directive
  (raw_tag
   (raw_content)
   (raw_tag
    (raw_content)
    (raw_tag
     (raw_content)))))
 (content))

==================
Raw/Comment Nesting
==================

{% comment %}
{% raw %}
{% endraw %}
{% endcomment %}
{% raw %}
{% comment %}
{% endcomment %}
{% endraw %}

---
  (template
   (comment)
   (directive
    (raw_tag
     (raw_content)))
   (content))
