test/corpus/raw.txt
================================================================================
Raw
================================================================================

{% raw %}abc{%raw%}ugh{%endraw%}abc
--------------------------------------------------------------------------------

(template
  (directive
    (code
      (raw
        body: (content))))
  (content))

================================================================================
Raw nested comment
================================================================================

{% raw %}abc{%comment%}ugh{%endcomment%}abc{%endraw%}
--------------------------------------------------------------------------------

(template
  (directive
    (code
      (raw
        body: (content)))))
